--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*EditorUserSettings.asset
 
 # Crashlytics generated file
 crashlytics-build.properties
